added new non-deterministic simulation model